<resources>
    <string name="app_name">Court Counter</string>
    <string name="initial_scores">0</string>
    <string name="team_A">Team A</string>
    <string name="team_B">Team B</string>
    <string name="point3">+3 Points</string>
    <string name="point2">+2 Points</string>
    <string name="free_throw">Free Throw</string>
    <string name="undo">Undo</string>
    <string name="reset">Reset</string>

</resources>
