<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/team_header_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/team_A"
                android:textAllCaps="true"
                android:textColor="#616161"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/team_points_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/initial_scores"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textSize="56sp" />

            <Button
                android:id="@+id/point3_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="24dp"
                android:onClick="point3A"
                android:text="@string/point3"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/point2_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:onClick="point2A"
                android:text="@string/point2"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/free_throw_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:onClick="freeThrowA"
                android:text="@string/free_throw"
                android:textColor="#FFFFFF"
                android:layout_marginBottom="16dp" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#000000" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/team_header_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/team_B"
                android:textAllCaps="true"
                android:textColor="#616161"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/team_points_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/initial_scores"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textSize="56sp" />

            <Button
                android:id="@+id/point3_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="24dp"
                android:onClick="point3B"
                android:text="@string/point3"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/point2_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:onClick="point2B"
                android:text="@string/point2"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/free_throw_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:onClick="freeThrowB"
                android:text="@string/free_throw"
                android:textColor="#FFFFFF"
                android:layout_marginBottom="16dp" />
        </LinearLayout>
    </LinearLayout>
    <CheckBox
        android:id="@+id/undo"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/undo"
        android:layout_weight="1"
        android:textSize="20sp" />

    <Button
        android:id="@+id/master_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="32dp"
        android:onClick="reset"
        android:text="@string/reset"
        android:textColor="#FFFFFF" />
</LinearLayout>
